--- a/src/components/shoppies.css
+++ b/src/components/shoppies.css
@@ -2,3 +2,88 @@
   margin: auto;
   width: 90%;
 }
+.footer {
+  background-color: black;
+  height: 175px;
+}
+.content {
+  display: flex;
+  align-content: space-around;
+  flex-wrap: nowrap;
+}
+.searchResults {
+  flex-basis: 25%;
+  padding: 25px;
+  background-color: lightgrey;
+  border: 1px solid grey;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+.searchFormInput {
+  width: 91%;
+}
+.searchInput {
+  text-align: center;
+}
+.nominatedDisplay {
+  flex-basis: 75%;
+  padding: 25px;
+  background-color: lightgrey;
+  border: 1px solid grey;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+.nominatedListContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+.nominatedMovie {
+  padding: 10px;
+  width: 30%;
+  text-align: center;
+}
+#completedBanner {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 650px;
+  height: 400px;
+  margin-top: 20px;
+  text-align: center;
+  background-color: black;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+  color: white;
+  padding: 25px;
+  padding-top: 100px;
+}
+.hide {
+  display: none;
+}
+.stretch {
+  width: 100%;
+  text-align: center;
+}
+.movieTitle {
+  text-align: center;
+  background-color: #343a40;
+  color: white;
+  padding: 5px;
+}
+.topdiv {
+  background-color: black;
+  height: 22px;
+}
+.banner .carousel {
+  border-bottom: 6px solid black;
+}
+.mainbg {
+  background-image: url("../images/theater-bg.jpg");
+  background-position: top;
+  background-attachment: fixed;
+}
+.white {
+  color: white;
+}
