--- a/src/components/shoppies.css
+++ b/src/components/shoppies.css
@@ -11,89 +11,23 @@
   align-content: space-around;
   flex-wrap: nowrap;
 }
-.searchResults {
-  flex-basis: 25%;
-  padding: 25px;
-  background-color: lightgrey;
-  border: 1px solid grey;
-  margin-top: 20px;
-  margin-right: 20px;
-}
-.searchFormInput {
-  width: 91%;
-  font-size: 20px;
-}
-.searchInput {
-  text-align: center;
-  padding-right: 15px;
-}
-.nominatedDisplay {
-  flex-basis: 70%;
-  padding: 25px;
-  background-color: lightgrey;
-  border: 1px solid grey;
-  margin-top: 20px;
-  min-width: 700px;
-}
-.nominatedListContainer {
-  display: flex;
-  flex-wrap: wrap;
-}
 .nominatedMovie {
   padding: 10px;
   width: 30%;
   text-align: center;
 }
-#completedBanner {
-  margin-left: auto;
-  margin-right: auto;
-  height: 300px;
-  margin-top: 47px;
-  text-align: center;
-  background-color: #000000d9;
-  color: white;
-  padding: 25px;
-  padding-top: 100px;
-  z-index: 400;
-}
-#completedBannerBg {
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 650px;
-  height: 400px;
-  width: 100%;
-  background-image: url(../images/film-bg.png);
-  background-repeat: repeat-x;
-  z-index: 300;
-}
-.hide {
-  display: none;
-}
-.stretch {
-  width: 100%;
-  text-align: center;
-}
-.movieTitle {
-  text-align: center;
-  background-color: black;
-  color: white;
-  padding: 5px;
-}
 .topdiv {
   background-color: black;
   height: 22px;
 }
-.banner .carousel {
-  border-bottom: 6px solid black;
-}
-.mainbg {
+#mainbg {
   background-image: url("../images/theater-bg.jpg");
   background-position: top;
   background-attachment: fixed;
 }
 .white {
   color: white;
+}
+.lighten {
+  opacity: 0.2;
 }
